Cors setting adjustment