@@ -1,8 +1,5 @@
 package com.dev4tech.group2.littlegeniuses.config.security;
 
-import java.util.Collections;
-import java.util.List;
-
 import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -11,6 +8,9 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
+import java.util.Collections;
+import java.util.List;
+
 @Configuration
 public class CorsConfig {
 
@@ -18,9 +18,8 @@ public class CorsConfig {
     public FilterRegistrationBean<CorsFilter> corsFilterFilterRegistrationBean() {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.addAllowedOriginPattern("*");
-        config.setAllowedOrigins(
-                List.of("*"));
+        //config.setAllowedOriginPatterns(Collections.singletonList("*")); //Cors to all origins
+        config.setAllowedOriginPatterns(List.of("http://localhost:4200", "http://localhost:60038"));
         config.setAllowedMethods(Collections.singletonList("*"));
         config.setAllowedHeaders(Collections.singletonList("*"));
 
